retrieve the list of available OAuth login providers from the server

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html>
+<!--suppress HtmlUnknownTarget -->
+<html lang="en">
 <head>
     <title>Hello WebSocket</title>
     <link href="/webjars/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -18,7 +19,8 @@
         <div class="col-md-6">
             <h1>Welcome!</h1>
 
-            <p>Perhaps you want to log in <a href="/oauth2/authorization/github">with GitHub</a>?</p>
+            <p>Perhaps you want to log in:</p>
+            <ol id="login-provider-list"></ol>
         </div>
     </div>
 </div>
