allow authenticating as a random user

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -20,7 +20,7 @@
             <h1>Welcome!</h1>
 
             <p>Perhaps you want to log in:</p>
-            <ol id="login-provider-list"></ol>
+            <ul id="login-provider-list"></ul>
         </div>
     </div>
 </div>
